resources/ej2-base/releasenotes/ej2-angular/Release-Notes/v19.3.54/Diagram.md
## Diagram

### Bug Fixes

- `#I337722` - The issue "Connector Position not Updated Properly when rotating it with segments" has been fixed.
- `#I341943` - The issue "BringIntoView API does not bring the large bounds into the screen viewport" has been fixed.
- `#I342681` - The issue "BPMN Task shape becomes ellipse shape when printing the diagram" has been fixed.
- `#I342979` - The issue "While loading the JSON data with line routing causes exception in Angular" has been fixed.
- `#I342681` - The issue "BPMN Task shape becomes square shape when printing the diagram" has been fixed.
- `#I345844` - The issue "An exception occurs when perform search in the symbol palette" has been fixed.
- `#F169922` - The issue "Need to provide support to set assistants based on datasource field in organizational chart" has been fixed.
- `#I345570` - The issue "Nodes doesn't gets arranged in zindex order after grouping it" has been fixed.
- `#I346110` - The issue "Text did not display on Connector line after adjusting the Bezier Connector" has been fixed.

