resources/ej2-base/releasenotes/ej2-angular/Release-Notes/v19.4.38/Diagram.md
## Diagram

### Bug Fixes

- `SF-356262` - The issue "Dragging and Drop node not working properly by enabling page settings" has been fixed.
- `F170399` - The issue "Unable to cast exception occurs when clicking on the expand icon" has been fixed.
- `#I337722` - The issue "Connector Position not Updated Properly when rotating it with segments" has been fixed.
- `#I341943` - The issue "BringIntoView API does not bring the large bounds into the screen viewport" has been fixed.
- `#I342681` - The issue "BPMN Task shape becomes ellipse shape when printing the diagram" has been fixed.
- `#I342979` - The issue "While loading the JSON data with line routing causes exception in Angular" has been fixed.
- `#I345844` - The issue "An exception occurs when perform search in the symbol palette" has been fixed.
- `#F169922` - The issue "Need to provide support to set assistants based on datasource field in organizational chart" has been fixed.
- `#I345570` - The issue "Nodes doesn't gets arranged in zindex order after grouping it" has been fixed.
- `#I346110` - The issue "Text did not display on Connector line after adjusting the Bezier Connector" has been fixed.
- `#I346676` - The issue "Drag and drop item from Tree-View to Diagram doesn't behave correctly" has been fixed.
- `#I347727` - The issue "RemovePalette API not working properly" has been fixed.
- `#I348028` - The issue "SelectionChange newValue is null when deselecting one of multiple selected shapes" has been fixed.

